--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Οικιακή Βιβλιοθήκη</h1>
 <script>
-    location.replace("http://localhost/");
+    location.replace("http://homelibrary.me");
 </script>
 </body>
 </html>
