--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Οικιακή Βιβλιοθήκη</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Οικιακή Βιβλιοθήκη</h1>
-<script>
-    location.replace("http://homelibrary.me");
-</script>
-</body>
+    <p>Μετακινείστε σε άλλη σελίδα.</p>
+    <script>
+      location.replace("http://www.homelibrary.me");
+    </script>
+  </body>
 </html>
