--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Οικιακή Βιβλιοθήκη</h1>
     <p>Μετακινείστε σε άλλη σελίδα.</p>
     <script>
-      location.replace("http://www.homelibrary.me");
+      location.replace("http://homelibrary.me:80");
     </script>
   </body>
 </html>
