--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Οικιακή Βιβλιοθήκη</title>
+    <link rel="stylesheet" href="dist/style.css">
   </head>
   <body>
     <h1>Οικιακή Βιβλιοθήκη</h1>
-    <p>Μετακινείστε σε άλλη σελίδα.</p>
+    <p>Μετακινείστε σε άλλη σελίδα. (http://homelibrary.me)</p>
     <script>
-      location.replace("http://homelibrary.me:80");
+      location.replace("http://homelibrary.me");
     </script>
   </body>
 </html>
